Fixed the elements spacing

--- a/styles/main.styl
+++ b/styles/main.styl
@@ -12,9 +12,6 @@ header
 ----------------- Navigation styles --------------------
 --------------------------------------------------------*/
 
-nav
-  margin-bottom: 2%
-
 nav ul
   display: flex
   
